crates/parser/tests/cases/snapshots/cases__errors__contract_const_fn.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(contract_const_fn), module::parse_module,\n    \"contract C {\\n const fn f() {}\\n}\")"

---
error: `const` qualifier can't be used with function definitions
  ┌─ contract_const_fn:2:2
  │
2 │  const fn f() {}
  │  ^^^^^


